--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -19,7 +19,6 @@
     "@hono/zod-openapi": "^1.2.0",
     "@hono/zod-validator": "^0.7.5",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -55,6 +54,9 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@lingui/babel-plugin-lingui-macro": "^5.7.0",
+    "@lingui/cli": "^5.7.0",
+    "@lingui/conf": "^5.7.0",
     "@prisma/config": "^7.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
@@ -62,6 +64,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
