--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -64,13 +64,16 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.4",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "flourite": "^1.3.0",
     "prisma": "^6.19.0",
+    "prismjs": "^1.30.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
