--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "hono": "^4.11.1",
+    "liquidjs": "^10.24.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "nodemailer": "^7.0.12",
