--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
+  "dev": "tsx src/server.ts", 
+  "build": "next build",
+  "start": "NODE_ENV=production tsx server.ts",
+   "lint": "eslint"
+},
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
@@ -16,6 +16,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hocuspocus/server": "^3.4.3",
+    "@hono/node-server": "^1.19.7",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-openapi": "^1.2.0",
     "@hono/zod-validator": "^0.7.5",
@@ -43,6 +44,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "hono": "^4.11.1",
+    "js-cookie": "^3.0.5",
     "liquidjs": "^10.24.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
@@ -52,6 +54,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "redis": "^5.10.0",
+    "socket.io": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
@@ -63,7 +66,8 @@
     "@prisma/config": "^7.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.19.27",
     "@types/nodemailer": "^7.0.4",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
