--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "tsx src/server.ts", 
-  "build": "next build",
-  "start": "NODE_ENV=production tsx server.ts",
-   "lint": "eslint"
-},
+    "dev": "tsx src/server.ts",
+    "build": "next build",
+    "start": "NODE_ENV=production tsx server.ts",
+    "lint": "eslint"
+  },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
@@ -40,10 +40,12 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.12",
     "bcryptjs": "^3.0.3",
+    "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "hono": "^4.11.1",
+    "ioredis": "^5.9.1",
     "js-cookie": "^3.0.5",
     "liquidjs": "^10.24.0",
     "lucide-react": "^0.561.0",
@@ -53,7 +55,6 @@
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
-    "redis": "^5.10.0",
     "socket.io": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
