Add api import-link to extract data job from link using readiability

--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -21,6 +21,7 @@
     "@hono/zod-openapi": "^1.2.0",
     "@hono/zod-validator": "^0.7.5",
     "@hookform/resolvers": "^5.2.2",
+    "@mozilla/readability": "^0.6.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -39,6 +40,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +49,7 @@
     "hono": "^4.11.1",
     "ioredis": "^5.9.1",
     "js-cookie": "^3.0.5",
+    "jsdom": "^27.4.0",
     "liquidjs": "^10.24.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
@@ -68,6 +71,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsdom": "^27.0.0",
+    "@types/mozilla-readability": "^0.2.1",
     "@types/node": "^20.19.27",
     "@types/nodemailer": "^7.0.4",
     "@types/prismjs": "^1.26.5",
