Add api create new version of a job article, submit change status of a job article and approve it, get all version of a job article

--- a/ai-resume-builder/package.json
+++ b/ai-resume-builder/package.json
@@ -53,6 +53,7 @@
     "jsdom": "^27.4.0",
     "liquidjs": "^10.24.0",
     "lucide-react": "^0.561.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "nodemailer": "^7.0.12",
     "react": "19.2.1",
